# WhosMansIsSky

./: .dockerignore  Dockerfile  LICENSE  README.md  WMIS.cabal  stack.yaml
src/: Main.hs
src/BioMap/: FaunaMap.hs  FloraMap.hs
src/Models/: Entities.hs  Fauna.hs  Flora.hs
src/Translation/: FaunaTranslate.hs  FloraTranslate.hs
