name:                WMIS
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/WMIS#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable WMIS
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Models.Entities
                       , Models.Fauna
                       , BioMap.FaunaMap
                       , Translation.FaunaTranslate
                       , Models.Flora
                       , BioMap.FloraMap
                       , Translation.FloraTranslate
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
